--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.9.0",
-    "@kinde-oss/kinde-auth-nextjs": "^2.3.6",
+    "@kinde-oss/kinde-auth-nextjs": "^2.10.0",
     "@mantine/carousel": "^7.11.1",
     "@mantine/charts": "^7.11.1",
     "@mantine/code-highlight": "^7.11.1",
@@ -40,7 +40,7 @@
     "controller": "^0.6.2",
     "dayjs": "^1.11.11",
     "embla-carousel-react": "^8.1.6",
-    "next": "14.2.5",
+    "next": "14.2.25",
     "next-auth": "^4.24.7",
     "next-navigation": "^1.0.6",
     "react": "^18",
@@ -49,7 +49,8 @@
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "rive-react": "^4.13.7",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "nodemailer": "^7.0.7"
   },
   "devDependencies": {
     "eslint": "^8",
